style.css
* {
    margin: 0 auto;
    padding: 0px;
}

body, html {
    height: 100%;
    width: 100%;
}

.bg_image1 {
    background-image: url("./img/sergey-zolkin-192937-blurredV2.jpg");
    height: 89%;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.wrapper {
    width: 1000px;
    height: 100%;
    margin: auto auto;
}

.enso {
    display: inline-block;
    height: 5.98%;
    width: auto; 
    /* margin: 2.3% 0% 0% 2.1%; */
    margin: 33px 0 0px 30px;
    position: absolute;
}

.name {
    display: inline-block;
    color: white;
    position: relative;
    margin: 3.5% 0% 0% 9%;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 700;
    font-size: 20px;
}

.subtitle {
    display: inline-block;
    color: white;
    margin-left: 10.7%;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: lighter;
    font-size: 13px;
    letter-spacing: 2px;
}

.nav_home {
    height: 90px;
    width: 110px;
    text-align: center;
    display: inline-block;
    position: absolute;
    margin-left: 350px;
    margin-top: -50px;
    border-bottom: 4px solid #f61f70;
    cursor:pointer;
	cursor:hand;
}

.nav_projects {
    height: 90px;
    width: 110px;
    text-align: center;
    display: inline-block;
    position: absolute;
    margin-left: 460px;
    margin-top: -50px;
    cursor:pointer;
	cursor:hand;
}

.nav_contact {
    height: 90px;
    width: 110px;
    text-align: center;
    display: inline-block;
    position: absolute;
    margin-left: 570px;
    margin-top: -50px;
    cursor:pointer;
	cursor:hand;
}

.nav_btn {
    color: white;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 700;
    font-size: 15px;
    line-height: 80px;
}

.title {
    color: white;
    margin: 150px 0px 0px -225px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 700;
    font-size: 60px;
    letter-spacing: 2px;
    display: inline-block;
    position: absolute;
}

.summary {
    color: white;
    margin: 260px 0px 0px -223px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: lighter;
    font-size: 16px;
    letter-spacing: 1px;
    display: inline-block;
    position: absolute;
}

.contact_here {
    color: white;
    text-decoration: none;
    border-bottom: 1px dotted white;
    padding-bottom: 3px;
    cursor:pointer;
	cursor:hand;
}

.projects {
    height: 1910px;
    background-color: white;
}

.email_btn {
    height: 50px;
    width: 150px;
    background-color: #f61f70;
    margin: 1% 0px 0px 89%;
    border-radius: 25px;
    position: fixed;
    -webkit-box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.15);
    -moz-box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.15);
    box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.15);
}

.hover_shadow {
    box-shadow: 1px 1px 10px 1px black;
}

.email_btn_icon {
    height: 65%;
    margin: 8px 0px 0px 12px;
    width: auto;
    display: inline-block;
    vertical-align: top;
}

.email_btn_txt {
    color: white;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
    letter-spacing: 1px;
    text-decoration: none;
    margin: 16px 0px 0px 6px;
    display: inline-block;
    vertical-align: top;
}

.content_wrapper {
    width: 100%;
    height: 104%;
    margin: auto auto;
}

.dynamic_nav {
    height: 60px;
    width: 100%;
    background-color: white;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    border-bottom: 1px solid rgb(233, 232, 232);
}

.nav_container {
    height: 60px;
    width: 65%;
    text-align: center;
}

.dynamic_nav_title {
    height: 60px;
    width: 250px;
    /* background-color: chocolate; */
    float: left;
    vertical-align: top;
}

.dynamic_nav_title > img {
    height: 80%;
    width: auto;
    margin-top: 2%;
    float: left;
}

.dynamic_nav_title > h1 {
    color: rgb(41, 41, 41);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 700;
    font-size: 18px;
    margin: 10px 45px 0px 0px;
}

.dynamic_nav_title > p {
    color: rgb(41, 41, 41);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: lighter;
    font-size: 12px;
    letter-spacing: 2px;
    margin-right: 5px;
}

.dynamic_nav_btns {
    height: 60px;
    width: 330px;
    /* background-color: chocolate; */
    margin-right: 4%;
    float: right;
    font-size: 0;
}

.dynamic_nav_link_container {
    height: 60px;
    width: 110px;
    display: inline-block;
    text-align: center;
    /* background-color: antiquewhite; */
    box-sizing: border-box;
    cursor:pointer;
	cursor:hand;
}
.dynamic_nav_link_container > p {
    color: rgb(41, 41, 41);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 600;
    font-size: 12px;
    margin-top: 20px; 
}

.active {
    border-bottom: 4px solid #f61f70;
}

.project_container {
    height: 27.4%;
    width: 62%;
    /* background-color: darkgoldenrod; */
    /* border-bottom: 1px solid rgb(233, 232, 232); */
}

.project_display {
    height: 60%;
    width: auto;
    margin: 14% 0% 0% 2%;
    display: inline-block;
}

.project_info {
    height: 50%;
    width: 32%;
    /* background-color: cadetblue; */
    display: inline-block;
    vertical-align: top;
    margin-top: 15%;
}

.project_link {
    text-decoration: none;
}

.project_link > h1 {
    color: rgb(41, 41, 41);
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 700;
    font-size: 38px;
    letter-spacing: 2px;
    display: inline-block;
}

.project_info > p {
    color: rgb(134, 134, 134);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: lighter;
    font-size: 14px;
    letter-spacing: 1px;
    margin: 10% 0 10% 0;
}

.repo_link {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: lighter;
    font-size: 12px;
    letter-spacing: 1px;
    background-color: #f61f70;
    color: white;
    padding: 5px;
    border-radius: 5px;
    text-decoration: none;
}

.shadow {
    -moz-transition: box-shadow 400ms;
    -o-transition: box-shadow 400ms;
    -webkit-transition: box-shadow 400ms;
    transition: box-shadow 400ms;
    -webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.295);
    -moz-box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.295);
    box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.295);
}

.border_shadow {
    width: 100%;
    height: auto;
    margin-top: 7.5%;
}

.extras {
    height: 12%;
    width: 100%;
    /* background-color: seagreen; */
    border-top: 1px solid rgb(233, 232, 232);
}

.bg_image2 {
    background-image: url("./img/zany-jadraque-571205-unsplash.jpg");
    height: 100%;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

